Revision history for HTML::FormWidgets

         - Moved boilerplate M::B subclass code to inc/Bob.pm
         - Suppressed Konig CPAN testing again
         - Added ScrollPin
         - Added SidebarPanel
         - Added TabSwapper
         - Added clear field to date
         - Tables are now client side sortable
         - Optional JS files are now selectable by the widget
         - Tree widget now self renders via HTML parser
         - Refactored html class names
         - Added ifield class to all input fields not buttons
         - Added row numbering to Table subclass
         - Fixed missing filler top line menu subclass
         - Switched to using TryCatch
         - Fixed readonly attribte in Date and slider subclasses
         - Moved English hint text out of subclasses
         - Can provide absolute (+) class names as widget types
         - Added POD widget type
         - Added _text attribute to Tree. Adds id to container div
         - Fixed undefined warning in Tree if no data
         - No longer calls markdown from localize
         - Label now localizes text then does markdown
         - Stopped Menu from sqealing about no value to inflate

0.5.200  27/06/2009
         - Changed key used to sign distro
         - Use Class::MOP in ensure_class_loaded

0.5.184  13/06/2009
         - Added more tests

0.4.179  08/06/2009
         - Fixed widths in paragraphs and tables

0.4.177  06/06/2009
         - Fixed bug in Paragraphs _split method

0.4.176  11/05/2009
         - Added docs for paragraphs and slider

0.4.171  27/04/2009
         - Fixed paragraph rendering bug
         - Improved testing idioms
         - Fixed missing seperator in Menu subclass
         - Added paragraph splitting to Paragraphs subclass
         - Fixed bug in arg expansion in localize
         - Fixed JS bug in group membership

0.4.156  09/03/2009
         - Debugged menu widget

0.3.141  11/03/2009
         - Added menu widget

0.3.137  22/02/2009